# val-studio

./: .gitignore  README.md  pyproject.toml
add-in/: README.md  manifest.dev.xml  manifest.staging.xml  manifest.xml
backend/api/: main.py
backend/assemble/: __init__.py  dcf_inputs.py  wacc_inputs.py
backend/calc_core/: __init__.py  checks.py  convertible.py  (+18 more)
docs/: audit_2026-07-19_skill_web_review.md  brand_color_palette.md  design_system.md  engine_spec.md  ia_ux_architecture.md  plan.md  plan_excel_skill.md  prd_excel_addin.md  skill_excel_workflow_spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: build_excel_skill.py  build_taxonomy_store.py  curate_layer_a.py  extract_viol_fixtures.py  recalc_gate.py
tests/: conftest.py  test_api.py  test_api_auditor.py  test_api_macro.py  test_api_roundtrip.py  test_api_session_features.py  test_bridge_pgr_gates.py  test_business_report.py  test_checks.py  test_convertible.py  test_cost_build.py  test_damodaran.py  test_dart_client.py  test_dart_corp.py  test_dart_employee.py  test_dart_reports.py  test_dcf_assembly.py  test_dcf_roundtrip.py  test_fa_maintenance.py  test_footnote.py  test_footnote_costs.py  test_frontend_wiring.py  test_fs_mapper.py  test_ksic.py  test_language_guard.py  test_lease.py  test_macro_client.py  test_manual_paste.py  test_merger.py  test_method_selector.py  test_multiples.py  test_ocr.py  test_opinion_template.py  test_pdf.py  test_peer_selection.py  test_price_client.py  test_provenance.py  test_rag_search.py  test_relative.py  test_research_brief.py  (+16 more)
(+129 files in other folders)
